--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,10 +1,10 @@
 [info]
-name = "Center Row"
+name = "ENC"
 version = "1.5.0"
-author = "Omeka Team"
-;description = ""
-;theme_link = ""
-author_link = "https://omeka.org/"
+author = "BibLibre"
+description = "Thème pour l'École Nationale des Chartes, basé sur Center Row"
+theme_link = "https://github.com/biblibre/omeka-s-theme-enc"
+author_link = "https://www.biblibre.com/"
 omeka_version_constraint = "^2.1.0"
 
 [config]
